Fix alignment issues in dashbord chart section to make responsive charts in all device. And formate the code structure

--- a/src/app/features/dashboard/dashboard/dashboard.scss
+++ b/src/app/features/dashboard/dashboard/dashboard.scss
@@ -5,9 +5,8 @@
     }
 }
 
-.pieChart {
+.barChart {
     canvas {
-      width: 400px !important;
-      height: 389px !important;
+        height: 293px !important;
     }
 }
